[macos] Save to PDF feature defaults filename to untitled.pdf instead of the title of the webpage.
Categories
(Core :: Printing: Setup, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox72 | --- | unaffected |
| firefox73 | --- | wontfix |
| firefox74 | --- | wontfix |
| firefox75 | --- | verified |
People
(Reporter: fiveNinePlusR, Assigned: jwatt)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [print2020_v75])
Attachments
(1 file)
Steps to reproduce:
-
navigate to google.com or any webpage
-
press cmd-p after page loads
-
select save as pdf from the lower left dropdown.
expected results: filename is the title of the page with .pdf appended.
actual results: filename is populated with untitled.pdf
| Reporter | ||
Comment 1•6 years ago
|
||
I did a regression and in my testing it was because of one of the changesets here: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=329340b1608d79266217ae37b098fa270f444c89&tochange=86afe431ec559c111ae1c1f94e4ede25776e9c50
likely:
https://hg.mozilla.org/mozilla-central/rev/524128dc119c459bdca6b02cd2090d88fca9e4b9
or
https://hg.mozilla.org/mozilla-central/rev/7f8a7ac4bfe49199d34e8581d1fbbce4e25b9650
though there are more printing related changes in that push set.
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Maybe this could be a good first bug.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 3•6 years ago
|
||
Confirmed in Firefox 73 on macOS 10.13.6.
This is a very annoying but that please should be fixed ASAP because it breaks the usage guidelines on the Mac.
Comment 4•6 years ago
|
||
Sorry but I have seen the same issue in Windows 10 as well as the Mac 10.13.6. The filename is unset in "Microsoft Print to PDF" as well as "Microsoft XPS PDF". The issue seems to only be presents if the save dialog opens. On Macs if you use a "PDF Services" target to print it does inherit the filename from the page title as it should. Testing on Linux Mint also inherits the filename since it is forced into a specific folder without a dialog so I believe the flaw is also present there just circumvented by the fixed target location. This flaw has been propagated since 73.0. Currently the only work around is to downgrade to 72.0.2 since I have tried Firefox Developer Edition 74.0 along with Nightly 75.0a1 with the same results.
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Ryan that was my post. After 3 days without a comment I figured I need a more direct way of commenting on the issue. I found fiveNinePlusR's bug which match my issue. I first noticed it on my Mac but when my Win 10 machine updated to 73.0 the same issue appeared. Then I check my Linux Mint machine the same issue was happening.
Comment 7•6 years ago
|
||
As a workaround, if you select Open in Preview first from the print window's PDF drop-down menu, select Print, and then Save as PDF the file name is auto-filled correctly. Since this issue is affecting developer versions FF 74 and 75 as indicated above, should users down-grade to the last version of FF 72 or might there be a fix for this soon?
Comment 8•6 years ago
|
||
Thanks for the workaround! But please do not downgrade to FF 72 because version 73 bringt important security fixes you should not miss.
| Assignee | ||
Comment 9•6 years ago
|
||
FWIW this was actually regressed by bug 1601775 (necessary to land bug 1602125).
Updated•6 years ago
|
| Assignee | ||
Comment 11•6 years ago
|
||
This behavior was broken by bug 1601775.
| Assignee | ||
Comment 12•6 years ago
|
||
(In reply to Ed Christensen from comment #4)
Sorry but I have seen the same issue in Windows 10 as well as the Mac 10.13.6.
The issue on Windows has been around a lot longer than the regression that happened on Mac (at least since the beginning of 2018). The patch I've put up only fixes the Mac regression, I'm afraid. If I have time later this week I'll try and get a Windows build working and see if I can fix Windows too, but that will need to be tracked in a different bug.
Comment 13•6 years ago
|
||
Comment 14•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 15•6 years ago
|
||
Reproduced the initial issue using old Nightly from 2019-12-31. Verified that the issue does not reproduce anymore using latest Fx 75.0b5 on macOS 10.13.6.
Comment 16•6 years ago
|
||
Reproduced using Firefox 75.0 on macOS 10.13.6 with this website of German Supreme Court: https://www.bundesverfassungsgericht.de/SharedDocs/Pressemitteilungen/DE/2020/bvg20-024.html – Other URLs have so far not been affected.
Comment 17•6 years ago
|
||
Another website the print to PDF feature does not work with properly is this one: https://www.hr4.de/rat-und-tat/5-tipps-und-wissenswertes-rund-um-den-weihnachtsstern,fuenf-tipps-rund-um-den-weihnachtsstern-100.html So, the bug is still there. Could you please take another look at it? Thanks!
| Assignee | ||
Updated•6 years ago
|
Description
•