Bug 1606512. Have save-as-PDF default to using the document title as the file name. r=bobowen

This behavior was broken by bug 1601775.

Differential Revision: https://phabricator.services.mozilla.com/D64928